# libVISCA2

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  configure.in  libvisca.pc.in
.github/workflows/: clang-format.yml  main.yml
VC2005/: Makefile.am  libvisca.sln  libvisca.vcproj  visca_cli.vcproj
examples/: CMakeLists.txt  Makefile.am  testvisca.c  visca_cli.c
examples/.libs/: testvisca  visca_cli
visca/: CMakeLists.txt  Makefile.am  libvisca.c  libvisca.h  libvisca_avr.c  libvisca_posix.c  libvisca_serial_posix.c  libvisca_serial_win32.c  libvisca_tcp.c  libvisca_win32.c  visca_win32.h
