PROJECT(libvisca C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(VERSION "2.0.0")

IF(UNIX)
    # Create PkgConfig file
    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/libvisca.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libvisca.pc @ONLY)
    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib${LIB_SUFFIX}/pkgconfig)
ENDIF(UNIX)
  
INCLUDE_DIRECTORIES(visca)  
ADD_SUBDIRECTORY(visca)
ADD_SUBDIRECTORY(examples)
