# process this file with autoconf to get a configure script
AC_INIT([visca/libvisca.c])

AM_INIT_AUTOMAKE(libvisca, 1.1.0)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_SRCDIR([visca/libvisca.c])

AC_PROG_CC
AC_PROG_LIBTOOL

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

AC_TYPE_SIZE_T

AC_FUNC_MMAP

# set the libtool shared library version numbers
lt_major=2
lt_revision=0
lt_age=0

AC_SUBST(lt_major)
AC_SUBST(lt_revision)
AC_SUBST(lt_age)

pkgincludedir='$(includedir)/visca'
AC_SUBST(pkgincludedir)

CFLAGS="$CFLAGS -Wall -Wunused"
AC_OUTPUT([ Makefile visca/Makefile examples/Makefile VC2005/Makefile])
